# a2a-space-agent

./: .gitignore  A2A_MCP_ISSUE.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt  validate.py
examples/: __init__.py  orchestrator_agent.py
space_agent_a2a/: .env.example  __init__.py  agent.json  agent.py  mcp_wrapper.py
